--- a/VRChat/88/1037288.html
+++ b/VRChat/88/1037288.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Y4ozdeqIKHfFhHIchFTT9YiEHcmB/7vUvlRnEtOjzEI="></script>
+    "ZmpmI3oEa6dd2yY3+FUSk2dqFybLkX6Uuc3uHrZHc4k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"TESELACT-02【3Dモデル】","description":"柚吉のガバガバロボアバター02です\n216円クオリティなんであまり過度の期待はしないよう\n気が向いたら使う程度でお願いします。\nパーツ分けしてパーツどりにでもお使いくだせぇ\nフォトンブリッツはかませません。","url":"https://booth.pm/ja/items/1037288","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1037288/2687fbc6-5058-4bd8-bf1f-baddffdcf7ce_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Y4ozdeqIKHfFhHIchFTT9YiEHcmB/7vUvlRnEtOjzEI="></script>
+    nonce="ZmpmI3oEa6dd2yY3+FUSk2dqFybLkX6Uuc3uHrZHc4k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1037288/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1037288/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
