--- a/VRChat/14/1036914.html
+++ b/VRChat/14/1036914.html
@@ -72,9 +72,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kyHa2YGjklvjPDp7cetdQ35P4ibqklR5NCOB7k+wZ5Q="></script>
+    "I8c1S9QBybq5w62fEZWXHZgAtYH6UNnxd30HeI4+v2I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"洋画とかでよく肩に下げてるあれ","description":"米兵とかバックパッカーとかのあれです","url":"https://booth.pm/ja/items/1036914","offers":{"priceCurrency":"JPY","@type":"Offer","price":"108"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1036914/52a896a1-8739-4ac0-9890-2260f5a43779_base_resized.jpg"}
     </script>
@@ -88,7 +88,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kyHa2YGjklvjPDp7cetdQ35P4ibqklR5NCOB7k+wZ5Q="></script>
+    nonce="I8c1S9QBybq5w62fEZWXHZgAtYH6UNnxd30HeI4+v2I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -112,6 +112,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -155,7 +157,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1036914/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               111
@@ -170,14 +172,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1036914/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               111
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
