--- a/VRChat/20/1351220.html
+++ b/VRChat/20/1351220.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+SViNY+eyoih+jt5klKfdRb2fPN+xWRuaUUi0XEIbEA="></script>
+    "IV2CYUHrRTdKNdX/7cQ7AyEwCi6i94clbd0gK9sGcu0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC使用想定モデル【サイバー武器セット2】","description":"オリジナル3Dモデル【サイバー武器セット2】\n製作者：ぜれゔぃあ\n\n商用利用可能な3Dモデルです。\n本モデルはVRChatでの利用を想定して作っていますが、アプリケーション、ゲーム、動画配信などにもご利用いただけます。\n\n【データ概要】\n\n●unitypackage\n\n●FBX\n\n●Texture\n・pngとpsdをご用意してあります。\n\n【利用規約】\n\n本規約は予告無く変更される場合があり、最新の利用規約が有効となります。\n\n・本モデルの著作権は改変の有無にかかわらず、本モデル作者ぜれゔぃあに帰属します。\n\n・商用利用、ゲームや動画配信に本モデルを使用することは可能です。\n\n・本モデルは改変は自由ですが、改変したものも含め再配布、転載を禁止します。\n\n・政治、宗教活動や他人が不快に感じるような表現、用途への利用を禁止します。\n\n・R-18/R-18Gへの使用は特に規制しません。\n\n・本モデルの使用によるいかなる損害に対し、製作者ぜれゔぃあは一切の責任を負いません。\n\n【更新履歴】\n\n2020/01/06\n-テクスチャの修正\n-モデルのデザインを改良\n-モデルの大きさ調整\n\n2019/07/21\n-鞘のオブジェクトの修正\n-テクスチャの修正\n\n\n作成日2019/05/06\n\n\n質問や問題等ございましたらお気軽にお問い合わせください。\nTwitter:@Xelevia1083\nDiscord:ぜれゔぃあ#8052\n","url":"https://booth.pm/ja/items/1351220","offers":{"priceCurrency":"JPY","@type":"Offer","price":"700"},"image":"https://booth.pximg.net/c/620x620/636ad57a-1ece-4d31-92ab-5100368e48ad/i/1351220/285b320a-4275-45fd-8461-09a1c71dfe99_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+SViNY+eyoih+jt5klKfdRb2fPN+xWRuaUUi0XEIbEA="></script>
+    nonce="IV2CYUHrRTdKNdX/7cQ7AyEwCi6i94clbd0gK9sGcu0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1351220/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1232
+                              1234
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1351220/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1232
+                              1234
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
