--- a/VRChat/70/1343570.html
+++ b/VRChat/70/1343570.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "QdmcOETRYRqdGVh7J/+l8viyWJGka/YQKf4NwHhhueA="></script>
+    "+nY85R6ERvnaVpoeOghsVzWcsXy3UydV5HSXwMTAWqo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"SheathHideKatana","description":"刀身が多少鞘からずれても見えない機構を搭載し、VRChat等のVRコンテンツで抜刀・納刀をしやすくしております。\n\n機構の資料向け商品のため、モデルのUV展開やテクスチャの用意などは一切ないものとなります。\n\nダウンロードしたzipファイルを解凍し、unitypackageファイルをUnity上でインポートして使用してください。Unity2017.4.15f1での動作を確認しております。","url":"https://booth.pm/ja/items/1343570","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/913fa660-7e17-489f-994b-c09d257c678a/i/1343570/b19b0425-3616-450a-8808-6e6ba45abd50_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QdmcOETRYRqdGVh7J/+l8viyWJGka/YQKf4NwHhhueA="></script>
+    nonce="+nY85R6ERvnaVpoeOghsVzWcsXy3UydV5HSXwMTAWqo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1343570/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1343570/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
