--- a/VRChat/86/1349286.html
+++ b/VRChat/86/1349286.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "FdwSWt0PRWyRQ6kRD50Fb2nGy3L38cx+S02iLfzEk90="></script>
+    "djUPUhJ4RZu2gLHiggXrGhrck67Id3BFnwD3UDKFr84="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【双葉のMatcap素材】001","description":"Matcap素材集です。\n製作者：鈴嶺 双葉(@FutabaRinrei)\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\nこの素材は３Dオブジェクトに使用するMatcapテクスチャ素材です。\nなお、ダウンロードした時点で同封された利用規約に同意したものとします。\n利用規約の内容は変更する場合があります。\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n≪利用に際して≫\nまたこの素材に関して\n利用自由、改変可、再配布不可、自作発言の不可とします。\nまた作成者はこの素材によって生じたいかなる損害の責任を負いません。\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n≪素材に関して≫\ngrass_○○　RGBYとおまけにR\u0026Bがあります。キラキラしています。\nrubber　黒いラバー質感です。テカテカ。\nstar_○○　星をあしらった素材です。RBYがあります。キラキラしています。\nREIWA　令和祝賀カラーで構成されています。\nMAZINTYU　魔神柱です。魔神柱です。\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n何かあればご連絡ください。\n連絡は作成者、鈴嶺双葉のTwitter(＠FutabaRinrei)まで。","url":"https://booth.pm/ja/items/1349286","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/be050168-a1f2-4ded-86f8-28e2ebc1d61f/i/1349286/d83d3ced-ad9d-4afc-90a4-d021b2d522da_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FdwSWt0PRWyRQ6kRD50Fb2nGy3L38cx+S02iLfzEk90="></script>
+    nonce="djUPUhJ4RZu2gLHiggXrGhrck67Id3BFnwD3UDKFr84="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1349286/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               182
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1349286/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               182
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
