--- a/VRChat/16/1348416.html
+++ b/VRChat/16/1348416.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "klKM1V87718ukwTlqamYGKK+El2C5/bvBvT1thVZ5BE="></script>
+    "u4Uih04U6qx1vKWZ4CpcoVve2PJiBP1afXOsfYUy5dM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オイルライター","description":"オイルライターの3Dモデルです。\nハイポリ版とローポリ版の2種類あります。\n※炎や煙のアニメーションは付属しておりません\n\nポリゴン数\n　ハイポリ版：3573\n　ローポリ版：1492\n\nシェイプキーによる蓋の開け閉めが可能です。\n","url":"https://booth.pm/ja/items/1348416","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/f8164400-9f44-409e-96df-13b02e21d48d/i/1348416/a48d2d60-1276-44e7-9500-63d4284df371_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="klKM1V87718ukwTlqamYGKK+El2C5/bvBvT1thVZ5BE="></script>
+    nonce="u4Uih04U6qx1vKWZ4CpcoVve2PJiBP1afXOsfYUy5dM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1348416/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               9
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1348416/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               9
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
